chore: add utils controllers, update readme
