# apps/second-look-api/upgrade/src/app/utils/utils.controller.ts
@@ -1,0 +1,23 @@
+import { Controller, Get } from '@nestjs/common';
+import { ApiOperation } from '@nestjs/swagger';
+
+@Controller('utils')
+export class UtilsController {
+  @ApiOperation({
+    summary: 'asdf',
+  })
+  @Get('aac')
+  getAAC_Code() {
+    return {};
+  }
+
+  @Get('crm')
+  getCRMCode() {
+    return {};
+  }
+
+  @Get('knockout')
+  validateKnockout() {
+    return {};
+  }
+}
